# navigator-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  extension_code.txt  package.json  pnpm-lock.yaml  temp.py
apps/extension/: build.ts  icons.js  manifest.json  package-lock.json  package.json  popup.html  postcss.config.js  tailwind.config.js  tsconfig.node.json  vite.background.config.ts  vite.content.config.ts  vite.popup.config.ts
apps/extension/public/: manifest.json
apps/extension/src/: App.tsx  background.ts  content.ts  index.css  main.tsx  popup.tsx  types.ts
apps/extension/src/automation/: index.ts
apps/extension/src/components/: Sidebar.tsx
apps/extension/src/constants/: AxiosInstance.ts
apps/extension/src/dom/: iframe.ts  index.ts  processor.ts
apps/extension/src/highlight/: index.ts
apps/extension/src/messaging/: index.ts
apps/extension/src/sidebar/: index.ts
apps/extension/src/utils/: index.ts  xpath.ts
apps/server/: docker-compose.yml  main.py  pyproject.toml
apps/server/app/: config.py  main.py
apps/server/app/api/: router.py
apps/server/app/api/endpoints/: dom_parser.py  health.py  tasks.py
apps/server/app/api/services/: storage_service.py  task_service.py
apps/server/app/api/utils/: llm.py  prompts.py
apps/server/app/api/utils/dom_parser/: dom_optimizer.py  filters.py  optimizer.py  optimizer10.py  optimizer111.py  optimizer12.py  optimizer2.py  optimizer3.py  optimizer4.py  optimizer5.py  optimizer6.py  optimizer7.py  optimizer8.py  optimizer9.py  optimizerdome12.py  processor.py
apps/server/app/models/: dom.py  tasks.py
